assets/css/style.css
/* ... */
/*********************************************
	special use case breakpoint
**********************************************/
@media(min-width: 640px) {
	.section-brands .brand .text .description {
		font-size: 11px;
	}
	.section-brands .brand .text .cta {
		font-size: 11px;
	}
}
@media(min-width: 1024px) {
	.section-brands .brand .text .description {
		font-size: 12px;
	}
}


/*********************************************
	tablet portrait breakpoint
**********************************************/
@media(min-width: 768px) {
	.section-feature .image img {
		display: block;
	}
	.section-feature .image .fill {
		display: none;
	}
	.hero .text {
		align-items: flex-start;
		position: absolute;
		top: 130px;	
	}
	.hero .text .inner {
		width: 38%;
		padding: 0 0 var(--desktop-padding) var(--desktop-padding);
	}
	.hero, .admin-bar .hero {
		height: 0;
		padding-top: 56.25%;
	}
	.main-navigation .menu a {
		font-weight: 400;
	}
}

/*********************************************
	small desktop and tablet landscape breakpoint
**********************************************/
@media(min-width: 960px) {
	body,
	.main-navigation .menu a {
		font-size: 15px;
	}
	h2 {
		font-size: 30px;
	}
	h3, h4, h5, h6 {
		font-size: 20px;
	}
	.site-max-960px .site-content,
	.site-max-960px .site-footer,
	.site-max-960px .site-header > .inner,
	.site-max-960px .hero {
		border-left: 1px solid var(--grid-lines);
		border-right: 1px solid var(--grid-lines);
	}
	.site-logo svg,
	.has-hero.scrolled .site-header .site-logo svg {
		width: 60px;
		height: 65px;
	}
	.filter .choice {
		flex-basis: 15%;
	}
	.section-brands .brands .brand {
		flex-basis: 33.333333333%;
	}
	.hero .text .inner {
		width: 33.3333%;
	}
	.section-locations.max-cols4 .locations > .location {
		flex-basis: 25%;
	}
	.section-locations.max-cols4 .locations > .location:nth-last-child(-n + 4):nth-child(4n + 1),
	.section-locations.max-cols4 .locations > .location:nth-last-child(-n + 4):nth-child(4n + 1) ~ .location {
		border-bottom-width: 0;
	}
	.section-locations.max-cols4 .locations > .location:nth-child(even) {
		border-right-width: 1px;
	}
	.section-locations.max-cols4 .locations > .location:nth-child(4n+0) {
		border-right-width: 0;
	}
}

/*********************************************
	large tablet and medium desktop breakpoint
**********************************************/
@media(min-width: 1120px) {
	.site-max-1120px .site-content,
	.site-max-1120px .site-footer,
	.site-max-1120px .site-header > .inner,
	.site-max-1120px .hero {
		border-left: 1px solid var(--grid-lines);
		border-right: 1px solid var(--grid-lines);
	}
	.hero, .admin-bar .hero {
		height: 750px;
		padding-top: 0;
	}
	.hero .text {
		top: 0;
		align-items: flex-end;
		padding-bottom: 200px;
	}
	h1 {
		font-size: 39px;
	}
	.section-articles .filtered-list .article {
		flex-basis: 25%;
	}
}

/*********************************************
	large tablet landscape breakpoint
**********************************************/
@media(min-width: 1280px) {
	.site-max-1280px .site-content,
	.site-max-1280px .site-footer,
	.site-max-1280px .site-header > .inner,
	.site-max-1280px .hero {
		border-left: 1px solid var(--grid-lines);
		border-right: 1px solid var(--grid-lines);
	}
	.section-brands .brand .text .description {
		font-size: 15px;
	}
	.section-brands .brand .text .cta {
		font-size: 12px;
	}
	.section-brands .logo-ouidad {
		height: 25px;
	}
	.section-brands .logo-wetbrush {
		height: 37px;
	}
	.section-brands .logo-goody {
		height: 42px;
	}
	.section-brands .logo-bioionic {
		height: 30px;
	}
	.section-brands .logo-solano {
		height: 21px;
	}
	.section-brands .logo-ace {
		height: 25px;
	}
}

/*********************************************
	large desktop breakpoint
**********************************************/
@media(min-width: 1440px) {
	.site-max-1440px .site-content,
	.site-max-1440px .site-footer,
	.site-max-1440px .site-header > .inner,
	.site-max-1440px .hero {
		border-left: 1px solid var(--grid-lines);
		border-right: 1px solid var(--grid-lines);
	}
}

/*********************************************
	huge desktop breakpoint
**********************************************/
@media(min-width: 1600px) {
	.site-max-1600px .site-content,
	.site-max-1600px .site-footer,
	.site-max-1600px .site-header > .inner,
	.site-max-1600px .hero {
		border-left: 1px solid var(--grid-lines);
		border-right: 1px solid var(--grid-lines);
	}
}

/*********************************************
	GDPR Cookie Banner customization
**********************************************/
#cookie-law-info-bar {
	box-shadow: none;
	font-size: 12px;
	text-align: left;
	padding: 20px;
}
.cli-plugin-button,
.cli-plugin-button.medium,
.cli_settings_button,
.cli-tab-footer .cli-btn {
	font-size: 12px;
	border: 1px transparent solid;
	padding: 14px 12px 12px;
	margin: 0;
	line-height: 1;
	white-space: nowrap;
	text-align: center;
	border-radius: 0;
}
.cli_settings_button {
	border: 1px solid white;
	display: inline-block;
	flex-grow: 1;
	font-weight: 400;
	text-transform: uppercase;
}
.cli-plugin-button,
.cli-plugin-button.medium {
	font-weight: bold;
	letter-spacing: 1px;
	flex-grow: 2;
}
.cli_settings_button + .cli-plugin-button {
	margin-left: 10px;
}
.cli-switch input:checked + .cli-slider {
	background-color: var(--primary);
}
.cli-tab-footer .cli-btn {
	text-transform: uppercase;
	font-weight: bold;
	background: black;
}
.cli-tab-header a.cli-nav-link,
.cli-switch .cli-slider:after,
span.cli-necessary-caption {
	transform: translateY(3px);
}
.cli-tab-header a:before {
	margin-top: -5px;
}
#cookie-law-info-bar .buttons {
	display: flex;
	margin-top: 10px;
	justify-content: space-between;
}
#cookie-law-info-bar > span,
#cookie-law-info-bar .cli-wrapper > span {
	display: flex;
	flex-direction: column;
	margin-left: auto;
	margin-right: auto;
}
.site-max-1280px #cookie-law-info-bar > span,
.site-max-1280px #cookie-law-info-bar .cli-wrapper > span {
	max-width: 1280px;
}
/* ... */

